@@ -94,10 +94,6 @@ func getInfoFromStore(s ioStore) (*persistentAgentInfo, error) {
 			errors.M(errors.MetaKeyPath, agentConfigFile))
 	}
 
-	if err := reader.Close(); err != nil {
-		return nil, err
-	}
-
 	configMap, err := cfg.ToMapStr()
 	if err != nil {
 		return nil, errors.New(err,
@@ -135,10 +131,6 @@ func updateAgentInfo(s ioStore, agentInfo *persistentAgentInfo) error {
 		return errors.New(err, fmt.Sprintf("fail to read configuration %s for the agent", agentConfigFile),
 			errors.TypeFilesystem,
 			errors.M(errors.MetaKeyPath, agentConfigFile))
-	}
-
-	if err := reader.Close(); err != nil {
-		return err
 	}
 
 	configMap := make(map[string]interface{})
